FIX - changed title to medlite to avoid copyright, and fixed the word wrapping issue

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -75,7 +75,8 @@ $mqSize: 850px;
     padding: 0;
     box-sizing: border-box;
     font: inherit;
-    word-break: break-all;
+    word-wrap: break-word;
+    hyphens: auto;
 }
 
 
